<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/knowledgetrove"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/Welcome"

        android:textColor="#070000"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="-20dp"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="18sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            app:boxStrokeColor="@color/black"
            app:counterTextColor="@color/black"
            app:hintTextColor="@color/black"
            android:id="@+id/Fullname"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Username"
        android:hint="@string/Username"
        app:boxStrokeColor="@color/black"
        app:counterTextColor="@color/black"
        app:hintTextColor="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            app:boxStrokeColor="@color/black"
            app:counterTextColor="@color/black"
            app:hintTextColor="@color/black"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                app:counterMaxLength="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneno"
                app:boxStrokeColor="@color/black"
                app:counterTextColor="@color/black"
                app:hintTextColor="@color/black"
                android:id="@+id/Phoneno"
                app:counterEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:background="@color/white"/>




        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PasswordonSignup"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/black"
            app:counterTextColor="@color/black"
            app:hintTextColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/createacc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:onClick="registerUser"
        android:text="@string/Createaccount"
        android:textColor="@color/white"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#0C0000"
        app:rippleColor="@color/black" />
    <Button
    android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/backtologin"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textColorLink="#FFFFFF"
        app:rippleColor="@color/black"
        android:id="@+id/backtosignup"
        />




</LinearLayout>