<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddaNewBook"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageButton
        android:id="@+id/Uploadimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/uploadbooksimg" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookname"
            android:textSize="30dp"
            android:textStyle="bold"

            android:layout_marginLeft="15dp"/>

        <EditText
            android:id="@+id/bookname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Enter Book Name"
            android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookDesc"
            android:textSize="30dp"
            android:textStyle="bold"

            android:layout_marginLeft="15dp"/>

        <EditText
            android:id="@+id/bookdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Enter Book Description"
            android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
      >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookPrice"
            android:textSize="30dp"
            android:textStyle="bold"

            android:layout_marginLeft="15dp"/>

        <EditText
            android:id="@+id/bookprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Enter Price"
            android:textSize="20dp" />
    </LinearLayout>



    <Button
        android:id="@+id/addproduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:text="Add Product"
        android:textSize="25dp"
        android:textStyle="bold" />


</LinearLayout>
</ScrollView>