<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categories">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/knowledgetrove"></ImageView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="200dp"
            android:background="@color/black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="sans-serif-black"
                android:padding="25dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:id="@+id/gotobuybooks"/>
            <ImageView
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:src="@drawable/book_guide_hero_books"
                android:layout_alignParentRight="true"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="200dp"
            android:background="@color/black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category2"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="sans-serif-black"
                android:padding="25dp"
                android:layout_alignParentRight="true"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:id="@+id/gotosellbooks1"/>
            <ImageView
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:src="@drawable/recycling_books"
                android:layout_alignParentLeft="true"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="200dp"
            android:background="@color/black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category3"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="sans-serif-black"
                android:padding="25dp"
                />

            <Button
                android:id="@+id/ebookspage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000" />
            <ImageView
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:src="@drawable/libraries_ebooks_orig"
                android:layout_alignParentRight="true"
                />


        </RelativeLayout>
    </LinearLayout>
</ScrollView>